add search tour
